# MoPanning

./: .gitignore  CMakeLists.txt  Instructions.md  README.md  info_for_ui_team.md
app/: Main.cpp
scripts/: package_mac.sh
source/: AudioAnalyzer.cpp  AudioAnalyzer.h  AudioEngine.cpp  AudioEngine.h  EpicLookAndFeel.h  FrameQueue.h  GLVisualizer.cpp  GLVisualizer.h  GLVisualizer2.cpp  GLVisualizer2.h  GridComponent.cpp  GridComponent.h  Main.cpp  MainComponent.cpp  MainComponent.h  MainController.cpp  MainController.h  MiniAudioProcessor.cpp  MiniAudioProcessor.h  SettingsComponent.cpp  SettingsComponent.h  Utils.h  VideoWriter.cpp  VideoWriter.h  WelcomeWindow.h
